--- a/plumeti/package.json
+++ b/plumeti/package.json
@@ -18,7 +18,9 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "nodemon": "^2.0.4",
     "sequelize": "^5.21.12"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
